--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@ yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
+.vscode
+.idea
+.history
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
@@ -41,6 +44,9 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+.vscode/
+.idea/
+.history/
 
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
