--- a/home-template/package.json
+++ b/home-template/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "dev": "vue-cli-service serve",
     "build": "vue-cli-service build"
   },
   "dependencies": {
@@ -14,11 +14,13 @@
     "element-ui": "^2.15.0",
     "jquery": "^3.6.0",
     "node-sass": "^4.14.1",
-    "vue": "^3.2.40",
+    "vue": "^2.6.12",
+    "vue-json-excel": "^0.3.0",
     "vue-piczoom": "^1.0.6",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -28,7 +30,7 @@
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "swiper": "^3.4.2",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.12"
   },
   "browserslist": [
     "> 1%",
