--- a/uniapp-template/package.json
+++ b/uniapp-template/package.json
@@ -91,7 +91,7 @@
     "babel-plugin-import": "^1.11.0",
     "cross-env": "^7.0.2",
     "jest": "^25.4.0",
-    "node-sass": "4.14.1",
+    "node-sass": "yarn:dart-sass",
     "postcss-comment": "^2.0.0",
     "vue-template-compiler": ">= 2.6.14 < 2.7"
   },
